--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Form</title>
-	<link rel="stylesheet" href="./css/2-form.css">
+	<title>Timer</title>
 </head>
-
 <body>
 	<header>
-		<h2>My Form</h2>
+		<h2>My Timer</h2>
 		<a href="./index.html">Go back</a>
 	</header>
 	<main>
 		<section>
-			<form class="feedback-form" autocomplete="off"></form>
+			<div class="timer"></div>
 		</section>
 	</main>
-	<script src="./js/2-form.js" type="module"></script>
+	<script src="./js/1-timer.js" type="module"></script>
 </body>
-
 </html>
