--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -3,19 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="./css/1-gallery.css">
+	<title>Snackber</title>
 </head>
 <body>
 	<header>
-		<h2>My Gallery</h2>
+		<h2>My Snackbar</h2>
 		<a href="./index.html">Go back</a>
 	</header>
 	<main>
 		<section>
-			<ul class="gallery"></ul>
+			<form class="snackbar-form" autocomplete="off"></form>
 		</section>
 	</main>
-	<script src="./js/1-gallery.js" type="module"></script>
+	<script src="./2-snackbar.html" type="module"></script>
 </body>
 </html>
