--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,17 +4,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Timer</title>
+	<link rel="stylesheet" href="iziToast.min.css">
+	<link rel="stylesheet" href="./css/1-timer.css">
 </head>
 <body>
 	<header>
 		<h2>My Timer</h2>
-		<a href="./index.html">Go back</a>
+		<button><a href="./index.html">Go back</a></button>
 	</header>
 	<main>
 		<section>
-			<div class="timer"></div>
+			<div class="timer-box"></div>
 		</section>
 	</main>
+	<script src="iziToast.min.js" type="text/javascript"></script>
 	<script src="./js/1-timer.js" type="module"></script>
 </body>
 </html>
