--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 					<a href="./1-timer.html">My Timer</a>
 				</li>
 				<li>
-					<a href="./2-snackbar.html">My 2-snackbar</a>
+					<a href="./2-snackbar.html">My Snackbar</a>
 				</li>
 			</ul>
 		</section>
