--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Snackber</title>
+	<title>Snackbar</title>
 </head>
 <body>
 	<header>
 		<h2>My Snackbar</h2>
-		<a href="./index.html">Go back</a>
+		<button><a href="./index.html">Go back</a></button>
 	</header>
 	<main>
 		<section>
