--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Snackbar</title>
+	<link rel="stylesheet" href="./css/2-snackbar.css">
 </head>
 <body>
 	<header>
@@ -12,9 +13,9 @@
 	</header>
 	<main>
 		<section>
-			<form class="snackbar-form" autocomplete="off"></form>
+			<form class="form"></form>
 		</section>
 	</main>
-	<script src="./2-snackbar.html" type="module"></script>
+	<script src="./js/2-snackbar.js" type="module"></script>
 </body>
 </html>
