--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Timer</title>
-	<link rel="stylesheet" href="iziToast.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="./css/1-timer.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
 			<div class="timer-box"></div>
 		</section>
 	</main>
-	<script src="iziToast.min.js" type="text/javascript"></script>
+	<script src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script>
 	<script src="./js/1-timer.js" type="module"></script>
 </body>
 </html>
