--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Snackbar</title>
+	<link href="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/css/iziToast.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="./css/2-snackbar.css">
 </head>
 <body>
@@ -16,6 +17,7 @@
 			<form class="form"></form>
 		</section>
 	</main>
+	<script src="https://cdn.jsdelivr.net/npm/izitoast@1.4.0/dist/js/iziToast.min.js"></script>
 	<script src="./js/2-snackbar.js" type="module"></script>
 </body>
 </html>
